--- a/src/assets/style/atomic/_variables.scss
+++ b/src/assets/style/atomic/_variables.scss
@@ -4,6 +4,7 @@ $min_width: 0 8 16 24 32 40 48 56 80 100 150 200;
 $max_width: 0 8 16 24 32 40 48 56 80 100 150 200 600;
 $fzs: 0, 12, 14, 16, 20, 24, 28, 32, 36, 38, 40, 48;
 $fw: 100, 200, 300, 400, 500, 600, 700, 800, 900;
+$fzr: 1, 2, 3, 4, 5, 6, 7, 8, 9;
 $bdrs_primary: 4px;
 $bdrs_round: 20px;
 $bdrs_circle: 50%;
